<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_switch_type"
        android:title="@string/title_map_switch_type" />

    <item
        android:id="@+id/action_add_poi"
        android:title="@string/title_add_poi" />

    <item
        android:id="@+id/action_add_district"
        android:title="@string/title_add_district" />

    <item android:title="@string/title_database_tools">

        <menu>
            <item
                android:id="@+id/database_backup"
                android:title="@string/title_backup" />

            <item
                android:id="@+id/database_restore"
                android:title="@string/title_restore" />

            <item
                android:id="@+id/database_clear"
                android:title="@string/title_clear" />

        </menu>

    </item>

    <item
        android:id="@+id/action_browse_poi"
        android:title="@string/title_browse_poi" />

    <item
        android:id="@+id/action_browse_district"
        android:title="@string/title_browse_district" />

</menu>